2011-07-22  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: sometimes ReceiveResponse event is attached to wrong parent.
        https://bugs.webkit.org/show_bug.cgi?id=65016

        Reviewed by Yury Semikhatsky.

        * http/tests/inspector/inspector-test.js:
        (initialize_InspectorTest.InspectorTest.dump):
        * inspector/timeline/resources/anImage.png: Added.
        * inspector/timeline/resources/anotherImage.png: Added.
        * inspector/timeline/timeline-receive-response-event-expected.txt: Added.
        * inspector/timeline/timeline-receive-response-event.html: Added.
        * platform/chromium/inspector/timeline/timeline-receive-response-event-expected.txt: Added.

2011-07-22  Kentaro Hara  <haraken@google.com>

        REGRESSION(r89535): Form reset does not repaint a file upload control.
        https://bugs.webkit.org/show_bug.cgi?id=65008

        Reviewed by Kent Tamura.

        This patch fixes the code so that the file upload control is repainted
        in updateFromElement() if no files are selected. The added test checks
        if the label next to the file chooser button becomes "No file chosen"
        when we press the reset button.

        * fast/forms/file-input-reset-expected.html: Added.
        * fast/forms/file-input-reset.html: Added.

2011-07-22  John Knottenbelt  <jknotten@chromium.org>

        [Chromium] Adjust test expectations.
        https://bugs.webkit.org/show_bug.cgi?id=65020

        Create WebKit bug for slow/timing out layout tests:
        editing/execCommand/4786404-1.html and
        editing/execCommand/break-out-of-empty-list-item.html

        Unreviewed.

        * platform/chromium/test_expectations.txt:

2011-07-22  Ryosuke Niwa  <rniwa@webkit.org>

        Another Chromium rebaselines after r91493.

        * platform/chromium-mac-leopard/svg/W3C-SVG-1.1-SE/filters-felem-01-b-expected.png: Added.