@@ -1,3 +1,15 @@
+2011-07-22  Pavel Podivilov  <podivilov@chromium.org>
+
+        Web Inspector: fix exception when paused in internal script.
+        https://bugs.webkit.org/show_bug.cgi?id=64995
+
+        Reviewed by Yury Semikhatsky.
+
+        * http/tests/inspector/debugger-test.js:
+        (initialize_DebuggerTest):
+        * inspector/debugger/pause-in-internal-script-expected.txt: Added.
+        * inspector/debugger/pause-in-internal-script.html: Added.
+
 2011-07-22  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Web Inspector: sometimes ReceiveResponse event is attached to wrong parent.
